# cloudflared-ui

./: index.html  package.json
src/: App.tsx  Router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: download_assets.rs  main.rs  utils.rs
src/@types/: index.d.ts
src/components/: Header.tsx  TunnelItem.tsx  TunnelListing.tsx
src/pages/Home/: index.tsx
src/pages/Home/components/: TunnelCreateModal.tsx  TunnelItem.tsx  TunnelListing.tsx
src/pages/LogActivity/: index.tsx
src/pages/Settings/: index.tsx
src/utils/: logger.ts  paths.ts  rust-functions.ts  settings-manager.ts
